--- a/hncgpartyfe/pubspec.yaml
+++ b/hncgpartyfe/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   http: ^1.1.0
-
+  lottie: ^3.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -62,9 +62,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/animations/loading_hncg_party_ver6.json
+    # - assets/images/welcome.png
+    - assets/animations/welcome.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
